welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:9: error: type cyan is not a member of object java.awt.Color
	setCouleurBrosse(c:Color.cyan);
                                 ^