welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {def marquer(){
	baisseBrosse();
	leveBrosse();
}
def faireV(){
	
	setCouleurBrosse(c:Color.cyan);
	avance();
	marquer();
	avance();
	gauche();
	avance();
	marquer();
	droite();
	avance();
	droite();
	avance();
	marquer();
	gauche();
	avance();
	gauche();
}
faireV();

}
